--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class='app'>
           <header class='w-full flex justify-center items-center flex-col'>
             <nav class='flex justify-end items-center w-full mb-10 pt-3'>
-              <a class="w-[30px] h-[30px]" href="https://github.com/distinctmind/" target="_blank">
+              <a class="w-[30px] h-[30px]" href="https://github.com/distinctmind/grid" target="_blank">
                 <img src="src/assets/github.png" alt="github logo"/>
               </a>
             </nav>
